--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -1,4 +1,12 @@
+--------------------------
+20171023-20171023
+
+- **1.What is Hyperledger Fabric?--什么是超级账本 Fabirc?------荆凯**
+https://github.com/BlockchainTranslator/General/blob/master/TechDoc/what-is-hyperledger-fabric.md
+- **2.Blockchain will kill the traditional firm 区块链将消灭传统公司**
+https://github.com/BlockchainTranslator/General/blob/master/NonTechDoc/Blockchain%20will%20kill%20the%20traditional%20firm.md
+
+---------------------------------------------------------------------------
+
 - **1.Blockchain Project Ecosystem - 区块链项目生态系统------何德林**
 https://github.com/BlockchainTranslator/General/blob/master/TechDoc/Blockchain-Project-Ecosystem.md
-- **2.What is Hyperledger Fabric?--什么是超级账本 Fabirc?------荆凯**
-https://github.com/BlockchainTranslator/General/blob/master/TechDoc/what-is-hyperledger-fabric.md
