--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -3,7 +3,7 @@
 
 - **1.What is Hyperledger Fabric?--什么是超级账本 Fabirc?------荆凯**
 https://github.com/BlockchainTranslator/General/blob/master/TechDoc/what-is-hyperledger-fabric.md
-- **2.Blockchain will kill the traditional firm 区块链将消灭传统公司**
+- **2.Blockchain will kill the traditional firm 区块链将消灭传统公司   -----------何德林**
 https://github.com/BlockchainTranslator/General/blob/master/NonTechDoc/Blockchain%20will%20kill%20the%20traditional%20firm.md
 
 ---------------------------------------------------------------------------
