--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -1,12 +1,18 @@
 --------------------------
-20171023-20171023
+20171023-20171029
 
 - **1.What is Hyperledger Fabric?--什么是超级账本 Fabirc?------荆凯**
 https://github.com/BlockchainTranslator/General/blob/master/TechDoc/what-is-hyperledger-fabric.md
 - **2.Blockchain will kill the traditional firm 区块链将消灭传统公司   -----------何德林**
 https://github.com/BlockchainTranslator/General/blob/master/NonTechDoc/Blockchain%20will%20kill%20the%20traditional%20firm.md
+- **3.Comparison of Ethereum, Hyperledger Fabric and Corda - 以太坊, Hyperledger Fabric 与 Corda 的对比----龙心小台**
+https://medium.com/@philippsandner/comparison-of-ethereum-hyperledger-fabric-and-corda-21c1bb9442f6
+
 
 ---------------------------------------------------------------------------
+20171016-20171022
 
 - **1.Blockchain Project Ecosystem - 区块链项目生态系统------何德林**
 https://github.com/BlockchainTranslator/General/blob/master/TechDoc/Blockchain-Project-Ecosystem.md
+- **2.Cryptocurrency Regulation Cross-Country Analysis - 加密货币监管--跨国分析------龙心小台**
+https://medium.com/blackmoon-crypto/cryptocurrency-regulation-cross-country-analysis-67452f1df80e
