--- a/_Tasks/2017-10-30.md
+++ b/_Tasks/2017-10-30.md
@@ -1,6 +1,6 @@
 |作者             |文章来源     	|
 |----             |---          |
-|AMY           |        |
+|AMY           |   1     |
 |茶猫           |        |
 |程伟           |        |
 |何德林         |        |
