--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -1,4 +1,24 @@
+20171023-20171029
+- **1.The Future of Enigma and Data | Enigma和数据的未来**
+https://github.com/BlockchainTranslator/General/blob/master/TechDoc/The-Future-of-Enigma-and-Data.md
+
+- **2.Value of the Token Model--代币模型的价值**
+https://github.com/BlockchainTranslator/General/blob/master/TechDoc/Value-of-the-Token-Model.md
+
+- **3.A Proof of Stake Design Philosophy--权益证明设计哲学**
+https://github.com/BlockchainTranslator/General/blob/master/TechDoc/a-proof-of-stake-design-philosophy.md
+
 --------------------------
+
+20171016-20171022
+
+- **1.Blockchain Project Ecosystem - 区块链项目生态系统------何德林**
+https://github.com/BlockchainTranslator/General/blob/master/TechDoc/Blockchain-Project-Ecosystem.md
+- **2.Cryptocurrency Regulation Cross-Country Analysis - 加密货币监管--跨国分析------龙心小台**
+https://github.com/BlockchainTranslator/General/blob/master/NonTechDoc/Cryptocurrency%20Regulation%20Cross-Country%20Analysis.md
+
+------------------------------------------------------------------------------------
+
 20171023-20171029
 
 - **1.What is Hyperledger Fabric?--什么是超级账本 Fabirc?------荆凯**
@@ -9,9 +29,4 @@ https://github.com/BlockchainTranslator/General/blob/master/NonTechDoc/Blockchai
 https://github.com/BlockchainTranslator/General/blob/master/TechDoc/Comparison-of-Ethereum-Hyperledger-Fabric-and-Corda.md
 
 ---------------------------------------------------------------------------
-20171016-20171022
 
-- **1.Blockchain Project Ecosystem - 区块链项目生态系统------何德林**
-https://github.com/BlockchainTranslator/General/blob/master/TechDoc/Blockchain-Project-Ecosystem.md
-- **2.Cryptocurrency Regulation Cross-Country Analysis - 加密货币监管--跨国分析------龙心小台**
-https://github.com/BlockchainTranslator/General/blob/master/NonTechDoc/Cryptocurrency%20Regulation%20Cross-Country%20Analysis.md
