--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -1,32 +1,20 @@
-20171023-20171029
-- **1.The Future of Enigma and Data | Enigma和数据的未来**
-https://github.com/BlockchainTranslator/General/blob/master/TechDoc/The-Future-of-Enigma-and-Data.md
+### 2017/10/23
+* [The Future of Enigma and Data | Enigma和数据的未来](TechDoc/The-Future-of-Enigma-and-Data.md)
 
-- **2.Value of the Token Model--代币模型的价值**
-https://github.com/BlockchainTranslator/General/blob/master/TechDoc/Value-of-the-Token-Model.md
+* [Value of the Token Model--代币模型的价值](TechDoc/Value-of-the-Token-Model.md)
 
-- **3.A Proof of Stake Design Philosophy--权益证明设计哲学**
-https://github.com/BlockchainTranslator/General/blob/master/TechDoc/a-proof-of-stake-design-philosophy.md
+* [A Proof of Stake Design Philosophy--权益证明设计哲学](TechDoc/a-proof-of-stake-design-philosophy.md)
 
---------------------------
+### 2017/10/16
 
-20171016-20171022
+* [Blockchain Project Ecosystem - 区块链项目生态系统](TechDoc/Blockchain-Project-Ecosystem.md)
 
-- **1.Blockchain Project Ecosystem - 区块链项目生态系统------何德林**
-https://github.com/BlockchainTranslator/General/blob/master/TechDoc/Blockchain-Project-Ecosystem.md
-- **2.Cryptocurrency Regulation Cross-Country Analysis - 加密货币监管--跨国分析------龙心小台**
-https://github.com/BlockchainTranslator/General/blob/master/NonTechDoc/Cryptocurrency%20Regulation%20Cross-Country%20Analysis.md
+* [Cryptocurrency Regulation Cross-Country Analysis - 加密货币监管--跨国分析](NonTechDoc/Cryptocurrency%20Regulation%20Cross-Country%20Analysis.md)
 
-------------------------------------------------------------------------------------
+### 2017/10/23
 
-20171023-20171029
+* [What is Hyperledger Fabric?--什么是超级账本 Fabirc?](TechDoc/what-is-hyperledger-fabric.md)
 
-- **1.What is Hyperledger Fabric?--什么是超级账本 Fabirc?------荆凯**
-https://github.com/BlockchainTranslator/General/blob/master/TechDoc/what-is-hyperledger-fabric.md
-- **2.Blockchain will kill the traditional firm 区块链将消灭传统公司   -----------何德林**
-https://github.com/BlockchainTranslator/General/blob/master/NonTechDoc/Blockchain%20will%20kill%20the%20traditional%20firm.md
-- **3.Comparison of Ethereum, Hyperledger Fabric and Corda - 以太坊, Hyperledger Fabric 与 Corda 的对比----龙心小台**
-https://github.com/BlockchainTranslator/General/blob/master/TechDoc/Comparison-of-Ethereum-Hyperledger-Fabric-and-Corda.md
+* [Blockchain will kill the traditional firm 区块链将消灭传统公司](NonTechDoc/Blockchain%20will%20kill%20the%20traditional%20firm.md)
 
----------------------------------------------------------------------------
-
+* [Comparison of Ethereum, Hyperledger Fabric and Corda - 以太坊, Hyperledger Fabric 与 Corda 的对比](TechDoc/Comparison-of-Ethereum-Hyperledger-Fabric-and-Corda.md)
