--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -11,6 +11,10 @@
 
 * [A Proof of Stake Design Philosophy--权益证明设计哲学](TechDoc/a-proof-of-stake-design-philosophy.md)
 
+* [The Colony Token Sale--Colony代币发售](NonTechDoc/The-Colony-Token-Sale.md)
+
+
+
 ### 2017/10/16
 
 * [Blockchain Project Ecosystem - 区块链项目生态系统](TechDoc/Blockchain-Project-Ecosystem.md)
