--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -1,5 +1,5 @@
 ### 2017/11/03
-* [Ethereum Casper 101 | 初识以太坊 Capsper](https://medium.com/@jonchoi/ethereum-casper-101-7a851a4f1eb0)
+* [Ethereum Casper 101 | 初识以太坊 Capsper](TechDoc/Ethereum Casper 101.md)
 
 ### 2017/10/23
 * [What is Hyperledger Fabric?--什么是超级账本 Fabirc?](TechDoc/what-is-hyperledger-fabric.md)
