--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -1,22 +1,20 @@
 ### 2017/11/03
-* [Ethereum Casper 101 | 初识以太坊 Capsper](/TechDoc/Ethereum%20Casper%20101.md)
+* [Ethereum Casper 101 | 初识以太坊 Capsper](/TechDoc/Ethereum%20Casper%20101.md)  oscnet 胖哥@胖哥说币
 
 ### 2017/10/23
-* [What is Hyperledger Fabric?--什么是超级账本 Fabirc?](TechDoc/what-is-hyperledger-fabric.md)
+* [What is Hyperledger Fabric?--什么是超级账本 Fabirc?](TechDoc/what-is-hyperledger-fabric.md)  荆凯(shuke0327)
 
-* [Blockchain will kill the traditional firm 区块链将消灭传统公司](NonTechDoc/Blockchain%20will%20kill%20the%20traditional%20firm.md)
+* [Blockchain will kill the traditional firm 区块链将消灭传统公司](NonTechDoc/Blockchain%20will%20kill%20the%20traditional%20firm.md)    何德林
 
-* [Comparison of Ethereum, Hyperledger Fabric and Corda - 以太坊, Hyperledger Fabric 与 Corda 的对比](TechDoc/Comparison-of-Ethereum-Hyperledger-Fabric-and-Corda.md)
+* [Comparison of Ethereum, Hyperledger Fabric and Corda - 以太坊, Hyperledger Fabric 与 Corda 的对比](TechDoc/Comparison-of-Ethereum-Hyperledger-Fabric-and-Corda.md)   龙心小台
 
-* [The Future of Enigma and Data | Enigma和数据的未来](TechDoc/The-Future-of-Enigma-and-Data.md)
+* [The Future of Enigma and Data | Enigma和数据的未来](TechDoc/The-Future-of-Enigma-and-Data.md) 胖哥@胖哥说币
 
-* [Value of the Token Model--代币模型的价值](TechDoc/Value-of-the-Token-Model.md)
+* [Value of the Token Model--代币模型的价值](TechDoc/Value-of-the-Token-Model.md) Xuming Meng
 
-* [A Proof of Stake Design Philosophy--权益证明设计哲学](TechDoc/a-proof-of-stake-design-philosophy.md)
+* [A Proof of Stake Design Philosophy--权益证明设计哲学](TechDoc/a-proof-of-stake-design-philosophy.md) Xuming Meng
 
-* [The Colony Token Sale--Colony代币发售](NonTechDoc/The-Colony-Token-Sale.md)
-
-
+* [The Colony Token Sale--Colony代币发售](NonTechDoc/The-Colony-Token-Sale.md)  林炜鑫
 
 ### 2017/10/16
 
