--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -1,7 +1,7 @@
-### 2017/11/03
+### 2017/10/30 - 2017/11/05
 * [Ethereum Casper 101 | 初识以太坊 Capsper](/TechDoc/Ethereum%20Casper%20101.md)  oscnet 胖哥@胖哥说币
 
-### 2017/10/23
+### 2017/10/23 - 2017/10/29
 * [What is Hyperledger Fabric?--什么是超级账本 Fabirc?](TechDoc/what-is-hyperledger-fabric.md)  荆凯(shuke0327)
 
 * [Blockchain will kill the traditional firm 区块链将消灭传统公司](NonTechDoc/Blockchain%20will%20kill%20the%20traditional%20firm.md)    何德林
@@ -16,9 +16,9 @@
 
 * [The Colony Token Sale--Colony代币发售](NonTechDoc/The-Colony-Token-Sale.md)  林炜鑫
 
-### 2017/10/16
+### 2017/10/16 - 2017/10/22
 
-* [Blockchain Project Ecosystem - 区块链项目生态系统](TechDoc/Blockchain-Project-Ecosystem.md)
+* [Blockchain Project Ecosystem - 区块链项目生态系统](TechDoc/Blockchain-Project-Ecosystem.md)  何德林
 
-* [Cryptocurrency Regulation Cross-Country Analysis - 加密货币监管--跨国分析](NonTechDoc/Cryptocurrency%20Regulation%20Cross-Country%20Analysis.md)
+* [Cryptocurrency Regulation Cross-Country Analysis - 加密货币监管--跨国分析](NonTechDoc/Cryptocurrency%20Regulation%20Cross-Country%20Analysis.md)  龙心小台
 
