--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -1,6 +1,8 @@
 ### 2017/10/30 - 2017/11/05
 * [Ethereum Casper 101 | 初识以太坊 Capsper](/TechDoc/Ethereum%20Casper%20101.md)  oscnet 胖哥@胖哥说币
 
+* [The Triangle of Harm | 危害三角形](TechDoc/The-Triangle-of-Harm.md)  龙心小台
+
 ### 2017/10/23 - 2017/10/29
 * [What is Hyperledger Fabric?--什么是超级账本 Fabirc?](TechDoc/what-is-hyperledger-fabric.md)  荆凯(shuke0327)
 
