--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -3,7 +3,7 @@
 
 * [The Triangle of Harm | 危害三角形](TechDoc/The-Triangle-of-Harm.md)  龙心小台
 
-* [THE BLOCKCHAIN ECONOMY: A BEGINNER’S GUIDE TO INSTITUTIONAL CRYPTOECONOMICS  | 区块链经济学：制度加密经济学初学者指南](/NonTechDoc/The%20Blockchain%20Economy:%20A%20beginner%E2%80%99s%20guide%20to%20institutional%20cryptoeconomics.md
+* [The Blockchain Economy: A beginner’s guide to institutional cryptoeconomics  | 区块链经济学：制度加密经济学初学者指南](/NonTechDoc/The%20Blockchain%20Economy:%20A%20beginner%E2%80%99s%20guide%20to%20institutional%20cryptoeconomics.md
 ) 何德林
 
 ### 2017/10/23 - 2017/10/29
