--- a/_Tasks/2017-10-30.md
+++ b/_Tasks/2017-10-30.md
@@ -9,7 +9,7 @@
 |Haoshi Hu        |https://medium.com/@argongroup/8-things-we-learned-devcon3-day-1-858681157db1        |
 |楷书             |        |
 |龙心小台         |http://vitalik.ca/general/2017/07/16/triangle_of_harm.html |
-|林炜鑫           |       |
+|林炜鑫           |https://steemit.com/eos/@eosio/who-should-control-a-blockchain       |
 |王明华           |        |
 |晓顿             |        |
 |小丹             |https://hackernoon.com/you-want-to-use-blockchain-for-what-f274cb0baec8        |
