--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -6,6 +6,9 @@
 * [The Blockchain Economy: A beginner’s guide to institutional cryptoeconomics  | 区块链经济学：制度加密经济学初学者指南](/NonTechDoc/The%20Blockchain%20Economy:%20A%20beginner%E2%80%99s%20guide%20to%20institutional%20cryptoeconomics.md
 ) 何德林
 
+* [Who Should Control A Blockchain? | 谁应该控制一个区块链？](/NonTechDoc/Who-Should-Control-A-Blockchain.md) 林炜鑫
+
+
 ### 2017/10/23 - 2017/10/29
 * [What is Hyperledger Fabric?--什么是超级账本 Fabirc?](TechDoc/what-is-hyperledger-fabric.md)  荆凯(shuke0327)
 
