--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -24,6 +24,8 @@
 
 * [The Colony Token Sale--Colony代币发售](NonTechDoc/The-Colony-Token-Sale.md)  林炜鑫
 
+* [Why the Brazilian and Argentinian Bitcoin communities oppose SegWit2x--为什么巴西和阿根廷社区反对SegWit2x](NonTechDoc/Why%20the%20Brazilian%20and%20Argentinian%20Bitcoin%20communities%20oppose%20SegWit2x.md)  AMY
+
 ### 2017/10/16 - 2017/10/22
 
 * [Blockchain Project Ecosystem - 区块链项目生态系统](TechDoc/Blockchain-Project-Ecosystem.md)  何德林
