add post: hyperledger fabric model

--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -8,6 +8,7 @@
 
 * [Who Should Control A Blockchain? | 谁应该控制一个区块链？](/NonTechDoc/Who-Should-Control-A-Blockchain.md) 林炜鑫
 
+* [Hyperledger Fabric Model - 超级账本 Fabric 项目的模型](TechDoc/hyperledger-fabric-model.md) shuke0327
 
 ### 2017/10/23 - 2017/10/29
 * [What is Hyperledger Fabric?--什么是超级账本 Fabirc?](TechDoc/what-is-hyperledger-fabric.md)  荆凯(shuke0327)
@@ -31,4 +32,3 @@
 * [Blockchain Project Ecosystem - 区块链项目生态系统](TechDoc/Blockchain-Project-Ecosystem.md)  何德林
 
 * [Cryptocurrency Regulation Cross-Country Analysis - 加密货币监管--跨国分析](NonTechDoc/Cryptocurrency%20Regulation%20Cross-Country%20Analysis.md)  龙心小台
-
