--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -1,5 +1,6 @@
 ### 2017/11/06 - 2017/11/12
-* [Hyperledger Fabric Transaction Flow - 超级账本 Fabric 项目的交易流程](TechDoc/hyperledger-fabric-model.md) shuke0327
+* [Hyperledger Fabric Transaction Flow | 超级账本 Fabric 项目的交易流程](TechDoc/hyperledger-fabric-model.md) shuke0327
+* [How Blockchains Will Turn Supply Chains Into Demand Chains | 区块链将如何把供应链转变为需求链](How Blockchains Will Turn Supply Chains Into Demand Chains.md ) 何德林
 
 ### 2017/10/30 - 2017/11/05
 * [Ethereum Casper 101 | 初识以太坊 Capsper](/TechDoc/Ethereum%20Casper%20101.md)  oscnet 胖哥@胖哥说币
