--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -2,6 +2,8 @@
 * [Hyperledger Fabric Transaction Flow | 超级账本 Fabric 项目的交易流程](TechDoc/transaction-flow.md) shuke0327
 * [How Blockchains Will Turn Supply Chains Into Demand Chains | 区块链将如何把供应链转变为需求链]( /NonTechDoc/How%20Blockchains%20Will%20Turn%20Supply%20Chains%20Into%20Demand%20Chains.md) 何德林
 
+* [Why and how the Cryptobubble will burst 为什么加密货币泡沫将破裂，如何破裂？](NonTechDoc/why-and-how-the-cryptobubble-will-burst.md) 鱼
+
 ### 2017/10/30 - 2017/11/05
 * [Ethereum Casper 101 | 初识以太坊 Capsper](/TechDoc/Ethereum%20Casper%20101.md)  oscnet 胖哥@胖哥说币
 
