--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -1,3 +1,7 @@
+### 2017/11/13 - 2017/11/19
+* [What Will Bitcoin Look Like in Twenty Years? | 未来二十年比特币会什么样？](NonTechDoc/what-will-bitcoin-look-like-in-20-years.md)
+　　 shuke0327
+
 ### 2017/11/06 - 2017/11/12
 * [Hyperledger Fabric Transaction Flow | 超级账本 Fabric 项目的交易流程](TechDoc/transaction-flow.md) shuke0327
 * [How Blockchains Will Turn Supply Chains Into Demand Chains | 区块链将如何把供应链转变为需求链]( /NonTechDoc/How%20Blockchains%20Will%20Turn%20Supply%20Chains%20Into%20Demand%20Chains.md) 何德林
