--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -4,6 +4,8 @@
 
 * [What Will Bitcoin Look Like in Twenty Years? | 未来二十年比特币会什么样？](NonTechDoc/what-will-bitcoin-look-like-in-20-years.md)
 　　 shuke0327
+   
+* [Understanding Token Velocity | 理解代币速度](https://github.com/BlockchainTranslator/General/blob/xnylong3/TechDoc/Understanding-Token-Velocity.md)  龙心小台
 
 ### 2017/11/06 - 2017/11/12
 * [Hyperledger Fabric Transaction Flow | 超级账本 Fabric 项目的交易流程](TechDoc/transaction-flow.md) shuke0327
