--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -9,7 +9,7 @@
 
 * [How to explain Lightning Network to your non-technical friends? 如何向你的非技术朋友解释闪电网络](TechDoc/how-to-explain-lightning-network-to-your-non-technical-friends.md)  小丹
 
-* [Why I Bet on Ethereum(上)?|为什么我会押赌注以太坊（上）]（TechDoc/Why-I-Bet-on-Ethereum.md）林炜鑫
+* [Why I Bet on Ethereum(上)?|为什么我会押赌注以太坊（上）](TechDoc/Why-I-Bet-on-Ethereum.md)林炜鑫
 
 ### 2017/11/06 - 2017/11/12
 * [Hyperledger Fabric Transaction Flow | 超级账本 Fabric 项目的交易流程](TechDoc/transaction-flow.md) shuke0327
