开始翻译 Blockchain Governance: Programming Our Future

--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -1,10 +1,20 @@
+
+### 2017/11/27 - 2017/12/03
+
+* [区块链治理：编程我们的未来](TechDoc/blockchain-governance-programming-our-future.md) 鱼 翻译中
+
+### 2017/11/20 - 2017/11/16
+
+* [Maker 的稳定币贷券傻瓜式简介](TechDoc/maker-for-dummies-a-plain-english-explanation-of-the-dai-stablecoin.md) 鱼
+
+
 ### 2017/11/13 - 2017/11/19
 
 * [How to be prepared for the coming Altcoin bull market. | 如何为即将到来的山寨币牛市做准备](NonTechDoc/how-to-be-prepared-for-the-coming-altcoin-bull-market.md) 鱼
 
 * [What Will Bitcoin Look Like in Twenty Years? | 未来二十年比特币会什么样？](NonTechDoc/what-will-bitcoin-look-like-in-20-years.md)
 　　 shuke0327
-   
+
 * [Understanding Token Velocity | 理解代币速度](TechDoc/Understanding-Token-Velocity.md)  龙心小台
 
 * [How to explain Lightning Network to your non-technical friends? 如何向你的非技术朋友解释闪电网络](TechDoc/how-to-explain-lightning-network-to-your-non-technical-friends.md)  小丹
