更新已译文章

--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -1,7 +1,7 @@
 
 ### 2017/11/27 - 2017/12/03
 
-* [区块链治理：编程我们的未来](TechDoc/blockchain-governance-programming-our-future.md) 鱼 翻译中
+* [区块链治理：设计我们的未来](TechDoc/blockchain-governance-programming-our-future.md) 鱼
 
 ### 2017/11/20 - 2017/11/16
 
