--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -1,4 +1,9 @@
 
+### 2017/12/04 - 2017/12/10
+
+* [The convergence of AI and Blockchain: what’s the deal?](TechDoc/the-convergence-of-ai-and-blockchain-whats-the-deal.md) 鱼 翻译中
+
+
 ### 2017/11/27 - 2017/12/03
 
 * [区块链治理：设计我们的未来](TechDoc/blockchain-governance-programming-our-future.md) 鱼
