--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -3,7 +3,8 @@
 
 * [区块链治理：设计我们的未来](TechDoc/blockchain-governance-programming-our-future.md) 鱼
 
-* [Don’t fall for the hype —Why Bitcoin’s $10,000 Price Doesn’t Reflect Its True Value | 这只是炒作？ -- 为何一万美元的比特币未反映其真实价值](NonTechDoc/Don’t fall for the hype —Why Bitcoin’s $10,000 Price Doesn’t Reflect Its True Value.md)  龙心小台
+* [Don’t fall for the hype —Why Bitcoin’s $10,000 Price Doesn’t Reflect Its True Value | 这只是炒作？ 为何一万美元的比特币未反映其真实价值](NonTechDoc/Don’t-fall-for-the-hype —Why-Bitcoin’s-$10,000 Price-Doesn’t-Reflect-Its-True-Value.md)  龙心小台
+
 
 ### 2017/11/20 - 2017/11/26
 
