--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -5,6 +5,8 @@
 
 * [Don’t fall for the hype —Why Bitcoin’s $10,000 Price Doesn’t Reflect Its True Value | 这只是炒作？ 为何一万美元的比特币未反映其真实价值](NonTechDoc/Don’t-fall-for-the-hype —Why-Bitcoin’s-$10,000 Price-Doesn’t-Reflect-Its-True-Value.md)  龙心小台
 
+* [超级账本Fabric问答](TechDoc/hyperledger-fabric-faq.md) 荆凯（shuke0327）
+
 
 ### 2017/11/20 - 2017/11/26
 
