更新已译文章

--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -1,8 +1,9 @@
 
 ### 2017/12/04 - 2017/12/10
 
-* [The convergence of AI and Blockchain: what’s the deal?](TechDoc/the-convergence-of-ai-and-blockchain-whats-the-deal.md) 鱼 翻译中
+* [人工智能与区块链的融合](TechDoc/the-convergence-of-ai-and-blockchain-whats-the-deal.md) 鱼
 
+* [为大众设计一个简单而安全的以太坊钱包](TechDoc/designing-a-simple-and-secure-ethereum-wallet-for-the-masses.md) 鱼
 
 ### 2017/11/27 - 2017/12/03
 
