--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -5,6 +5,8 @@
 
 * [为大众设计一个简单而安全的以太坊钱包](TechDoc/designing-a-simple-and-secure-ethereum-wallet-for-the-masses.md) 鱼
 
+* [谷歌和Facebook都能被击败](/NonTechDoc/Google-and-Facebook-Too-Can-Be-Disrupted.md)
+
 ### 2017/11/27 - 2017/12/03
 
 * [区块链治理：设计我们的未来](TechDoc/blockchain-governance-programming-our-future.md) 鱼
