--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -1,4 +1,8 @@
 
+### 2017/12/11 - 2017/12/17
+
+* [thereum - What is it? | 以太坊是什么？](TechDoc/Ethereum-what-is-it.md)
+
 ### 2017/12/04 - 2017/12/10
 
 * [人工智能与区块链的融合](TechDoc/the-convergence-of-ai-and-blockchain-whats-the-deal.md) 鱼
