--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -1,7 +1,7 @@
 
 ### 2017/12/11 - 2017/12/17
 
-* [thereum - What is it? | 以太坊是什么？](TechDoc/Ethereum-what-is-it.md)
+* [Ethereum - What is it? | 以太坊是什么？](TechDoc/Ethereum-what-is-it.md) 龙心小台
 
 ### 2017/12/04 - 2017/12/10
 
@@ -15,7 +15,7 @@
 
 * [区块链治理：设计我们的未来](TechDoc/blockchain-governance-programming-our-future.md) 鱼
 
-* [Don’t fall for the hype —Why Bitcoin’s $10,000 Price Doesn’t Reflect Its True Value | 这只是炒作？ 为何一万美元的比特币未反映其真实价值](NonTechDoc/Don’t-fall-for-the-hype —Why-Bitcoin’s-$10,000 Price-Doesn’t-Reflect-Its-True-Value.md)  龙心小台
+* [Don’t fall for the hype —Why Bitcoin’s $10,000 Price Doesn’t Reflect Its True Value | 这只是炒作？ 为何一万美元的比特币未反映其真实价值](NonTechDoc/Don’t-fall-for-the-hype —Why-Bitcoin’s-$10,000 Price-Doesn’t-Reflect-Its-True-Value.md)  龙心小台 
 
 * [超级账本Fabric问答](TechDoc/hyperledger-fabric-faq.md) 荆凯（shuke0327）
 
