为什么 Enigma 的隐私协议将加速我们去中心化的未来

--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -1,3 +1,8 @@
+### 2017/12/18 - 2017/12/24
+
+* [为什么 Enigma 的隐私协议将加速我们去中心化的未来](TechDoc/why-enigmas-privacy-protocol-will-power-our-decentralized-future.md) 鱼
+
+
 ### 2017/12/11 - 2017/12/17
 
 * [Ethereum - What is it? | 以太坊是什么？](TechDoc/Ethereum-what-is-it.md) 龙心小台
