--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -32,6 +32,8 @@
 
 * [A Tour of Cosmos for Developers | Cosmos 开发者之旅](TechDoc/A-Tour-of-Cosmos-for-Developers.md) 龙心小台
 
+* [Why-I-Bet-on-Ethereum（下）|为什么我会押赌注以太坊（下）](General/blob/master/TechDoc/Why-I-Bet-on-Ethereum2.md) 林炜鑫
+
 
 ### 2017/11/13 - 2017/11/19
 
