--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -1,3 +1,7 @@
+### 2017/12/25 - 2017/12/32
+
+* [我们为什么要为改变世界而战斗？](NonTechDoc/why-do-we-fight-to-change-the-world.md) 鱼
+
 ### 2017/12/18 - 2017/12/24
 
 * [为什么 Enigma 的隐私协议将加速我们去中心化的未来](TechDoc/why-enigmas-privacy-protocol-will-power-our-decentralized-future.md) 鱼
