世界，你好 - Web3 基金会介绍

--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -1,4 +1,9 @@
-### 2017/12/25 - 2017/12/32
+
+### 2018/1/1 - 2018/1/7
+
+* [世界，你好 - Web3 基金会介绍](NonTechDoc/hello-world.md) 鱼
+
+### 2017/12/25 - 2017/12/31
 
 * [我们为什么要为改变世界而战斗？](NonTechDoc/why-do-we-fight-to-change-the-world.md) 鱼
 
