马克·扎克伯格 2018 新年思考

--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -1,6 +1,8 @@
 
 ### 2018/1/1 - 2018/1/7
 
+* [马克·扎克伯格 2018 新年思考](NonTechDoc/Mark-Zuckerberg-2018.md) 鱼
+
 * [世界，你好 - Web3 基金会介绍](NonTechDoc/hello-world.md) 鱼
 
 ### 2017/12/25 - 2017/12/31
