--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -36,6 +36,8 @@
 
 * [超级账本Fabric问答](TechDoc/hyperledger-fabric-faq.md) 荆凯（shuke0327）
 
+* [NEO对比Ethereum:为什么NEO可能是2018年最强的加密数字货币(一)](NonTechDoc/NEO-versus-Ethereum(1).md) 林炜鑫
+
 
 ### 2017/11/20 - 2017/11/26
 
