“Tau 的力量”活动教程

--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -1,3 +1,6 @@
+
+* [“Tau 的力量”活动教程](NonTechDoc/Powers of Tau Tutorial.md) 鱼
+
 ### 2018/1/8 - 2018/1/14
 
 * [18 个对 2018 年区块链的预测](NonTechDoc/18-predictions-for-2018.md) 鱼
