--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -26,6 +26,8 @@
 
 * [你需要知道的比特币技术的未来](TechDoc/future-of-bitcoin.md) 鱼
 
+* [NEO对比Ethereum:为什么NEO可能是2018年最强的加密数字货币(二)](NonTechDoc/NEO-versus-Ethereum(2).md) 林炜鑫
+
 ### 2017/12/04 - 2017/12/10
 
 * [人工智能与区块链的融合](TechDoc/the-convergence-of-ai-and-blockchain-whats-the-deal.md) 鱼
