--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -1,3 +1,8 @@
+### 2018/1/22 - 2018/1/28
+
+* [Whale Tactics | 鲸鱼战术](NonTechDoc/Whale-Tactics.md) 龙心小台
+
+### 2018/1/15 - 2018/1/21
 
 * [“Tau 的力量”活动教程](NonTechDoc/Powers of Tau Tutorial.md) 鱼
 
