--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -5,6 +5,7 @@
 ### 2018/1/15 - 2018/1/21
 
 * [“Tau 的力量”活动教程](NonTechDoc/Powers of Tau Tutorial.md) 鱼
+* [为什么2018年将会是以太坊和量子链的一年（二）](NonTechDoc/Why%202018%20Will%20Be%20The%20Year%20Of%20Ethereum%20And%20QTUM(2).md) 林炜鑫
 
 ### 2018/1/8 - 2018/1/14
 
