--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -28,6 +28,8 @@
 
 * [为什么 Enigma 的隐私协议将加速我们去中心化的未来](TechDoc/why-enigmas-privacy-protocol-will-power-our-decentralized-future.md) 鱼
 
+* [NEO对比Ethereum:为什么NEO可能是2018年最强的加密数字货币(三)](NonTechDoc/NEO-versus-Ethereum(3).md)林炜鑫
+
 
 ### 2017/12/11 - 2017/12/17
 
