--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -2,6 +2,10 @@
 
 * [Whale Tactics | 鲸鱼战术](NonTechDoc/Whale-Tactics.md) 龙心小台
 
+* [How to Save on Bitcoin's Soaring Fees | 如何节省比特币高昂的交易费用](NonTechDoc/How-to-Save-on-Bitcoin's-Soaring-Fees.md) 林炜鑫
+
+* [Regulators Are Looking at Cryptocurrency | 监管机构正着眼于加密货币](NonTechDoc/Regulators-Are-Looking-at-Cryptocurrency.md#regulators-are-looking-at-cryptocurrency) 林炜鑫
+
 ### 2018/1/15 - 2018/1/21
 
 * [“Tau 的力量”活动教程](NonTechDoc/Powers of Tau Tutorial.md) 鱼
