比特币威胁模型

--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -1,5 +1,6 @@
+* [比特币威胁模型](TechDoc/Bitcoin Threat Model.md)
 
-* [“Tau 的力量”活动教程](NonTechDoc/Powers of Tau Tutorial.md) 鱼
+* [Powers of Tau 活动教程](NonTechDoc/Powers of Tau Tutorial.md) 鱼
 
 ### 2018/1/8 - 2018/1/14
 
