--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -1,5 +1,5 @@
 ### 2018/1/22 - 2018/1/28
-* [Bitcoin Threat Model | 比特币威胁模型](TechDoc/Bitcoin Threat Model.md) 鱼
+* [Bitcoin Threat Model | 比特币威胁模型](TechDoc/Bitcoin%20Threat%20Model.md) 鱼
 
 * [Whale Tactics | 鲸鱼战术](NonTechDoc/Whale-Tactics.md) 龙心小台
 
