add new paper:cryptoasset valuation

--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -6,6 +6,7 @@
 * [How to Save on Bitcoin's Soaring Fees | 如何节省比特币高昂的交易费用](NonTechDoc/How-to-Save-on-Bitcoin's-Soaring-Fees.md) 林炜鑫
 
 * [Regulators Are Looking at Cryptocurrency | 监管机构正着眼于加密货币](NonTechDoc/Regulators-Are-Looking-at-Cryptocurrency.md#regulators-are-looking-at-cryptocurrency) 林炜鑫
+* [On Value, Velocity and Monetary Theory -- A New Approach to Cryptoasset Valuations | 论价值，流通速度与货币理论 -- 加密资产估值的新思路](TechDoc/crryptoasset-valuations.md) shuke0327
 
 ### 2018/1/15 - 2018/1/21
 
