--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -8,6 +8,8 @@
 * [Regulators Are Looking at Cryptocurrency | 监管机构正着眼于加密货币](NonTechDoc/Regulators-Are-Looking-at-Cryptocurrency.md#regulators-are-looking-at-cryptocurrency) 林炜鑫
 * [On Value, Velocity and Monetary Theory -- A New Approach to Cryptoasset Valuations | 论价值，流通速度与货币理论 -- 加密资产估值的新思路](TechDoc/crryptoasset-valuations.md) shuke0327
 
+* [Don't HODL, BUIDL: How Blockchain Tech Will Add Value in 2018|不仅HODL，还要BUIDL：2018区块链增值的方式](NonTechDoc/How-Blockchain-Tech-Will-Add-Value-in-2018.md) 林炜鑫
+
 ### 2018/1/15 - 2018/1/21
 
 * [Powers of Tau 活动教程](NonTechDoc/Powers of Tau Tutorial.md) 鱼
