--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -1,3 +1,6 @@
+### 2018/1/29 - 2018/2/4
+* [2017 Was Bitcoin's Year. 2018 Will Be Ethereum's | 2017年是比特币的一年,而2018将是以太坊的一年](NonTechDoc/2017-Was-Bitcoin-Year-2018-Will-Be-Ethereum.md) 林炜鑫
+
 ### 2018/1/22 - 2018/1/28
 * [Bitcoin Threat Model | 比特币威胁模型](TechDoc/Bitcoin%20Threat%20Model.md) 鱼
 
