--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -1,6 +1,8 @@
 ### 2018/1/29 - 2018/2/4
 * [2017 Was Bitcoin's Year. 2018 Will Be Ethereum's | 2017年是比特币的一年,而2018将是以太坊的一年](NonTechDoc/2017-Was-Bitcoin-Year-2018-Will-Be-Ethereum.md) 林炜鑫
 
+* [以债券抵押的由发行人背书的代币](TechDoc/collateralized-debt-obligations-for-issuer-backed-tokens.md) 鱼
+
 ### 2018/1/22 - 2018/1/28
 * [Bitcoin Threat Model | 比特币威胁模型](TechDoc/Bitcoin%20Threat%20Model.md) 鱼
 
