--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -3,6 +3,8 @@
 
 * [以债券抵押的由发行人背书的代币](TechDoc/collateralized-debt-obligations-for-issuer-backed-tokens.md) 鱼
 
+* [一步步教你使用 Decentraland 命令行接口](TechDoc/decentraland-command-line-interface.md) 鱼
+
 ### 2018/1/22 - 2018/1/28
 * [Bitcoin Threat Model | 比特币威胁模型](TechDoc/Bitcoin%20Threat%20Model.md) 鱼
 
