--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -6,6 +6,7 @@
 * [一步步教你使用 Decentraland 命令行接口](TechDoc/decentraland-command-line-interface.md) 鱼
 
 * [Best alternatives to Bitcoin: 10 cryptocurrencies to watch in 2018|比特币的最佳替代品：2018年要关注的10种加密货币](NonTechDoc/Best-alternatives-to-Bitcoin-10-cryptocurrencies-to-watch-in-2018.md) 林炜鑫
+* [What trends await us in 2018? | 2018年有哪些趋势等着我们呢？](NonTechDoc/What-trends-await-us-in-2018.md)林炜鑫
 
 ### 2018/1/22 - 2018/1/28
 * [Bitcoin Threat Model | 比特币威胁模型](TechDoc/Bitcoin%20Threat%20Model.md) 鱼
