--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -11,6 +11,8 @@
 
 * [What trends await us in 2018? | 2018年有哪些趋势等着我们呢？](NonTechDoc/What-trends-await-us-in-2018.md)林炜鑫
 
+* [Blockchain in the Boardroom: Toward Enterprise Deployment | 区块链的发展方向：面向企业部署](NonTechDoc/Blockchain%20in%20the%20Boardroom：Toward%20Enterprise%20Deployment.md)林炜鑫
+
 
 ### 2018/1/22 - 2018/1/28
 * [Bitcoin Threat Model | 比特币威胁模型](TechDoc/Bitcoin%20Threat%20Model.md) 鱼
@@ -45,6 +47,9 @@
 ### 2017/12/25 - 2017/12/31
 
 * [我们为什么要为改变世界而战斗？](NonTechDoc/why-do-we-fight-to-change-the-world.md) 鱼
+
+* [NEO对比Ethereum:为什么NEO可能是2018年最强的加密数字货币(四)]（NonTechDoc/NEO-versus-Ethereum(4).md）林炜鑫
+
 
 ### 2017/12/18 - 2017/12/24
 
