--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -13,6 +13,18 @@
 
 * [Blockchain in the Boardroom: Toward Enterprise Deployment | 区块链的发展方向：面向企业部署](NonTechDoc/Blockchain%20in%20the%20Boardroom：Toward%20Enterprise%20Deployment.md)林炜鑫
 
+* [Why Bitcoin Needs Fiat (And This Won't Change in 2018)|为什么比特币需要法定货币(这一情况在2018年不会改变)](NonTechDoc/Why-Bitcoin-Needs-Fiat%20-(-And-This-Won't-Change-in-2018).md)林炜鑫
+
+* [ICOs: The Tech Is Here, But Where Are the Standards?|ICOs:技术到位了，但标准在哪里?](NonTechDoc/ICO-The-Tech-Is-Here-But-Where-Are-the-Standards.md)林炜鑫
+
+* [I Love Bitcoin. That's Why I Sue Exchanges|我爱比特币。这就是我起诉交易所的原因](NonTechDoc/I-Love-Bitcoin-That's-Why-I-Sue-Exchanges.md)林炜鑫
+
+* [Crypto Cat and Mouse: 2018 Will Be the Year of Policy Subterfuge|加密货币里的猫和老鼠：2018将是政策下的一年](NonTechDoc/Crypto-Cat-and-Mouse-2018-Will-Be-the-Year-of-Policy-Subterfuge.md)林炜鑫
+
+* [2018's Big Question: Can Bitcoin Forks Deliver Value?|2018年的一个大问题是:比特币的分叉币存在价值吗?](NonTechDoc/2018's-Big-Question-Can-Bitcoin-Forks-Deliver-Value.md)林炜鑫
+
+
+
 
 ### 2018/1/22 - 2018/1/28
 * [Bitcoin Threat Model | 比特币威胁模型](TechDoc/Bitcoin%20Threat%20Model.md) 鱼
@@ -43,6 +55,9 @@
 * [马克·扎克伯格 2018 新年思考](NonTechDoc/Mark-Zuckerberg-2018.md) 鱼
 
 * [世界，你好 - Web3 基金会介绍](NonTechDoc/hello-world.md) 鱼
+
+* [NEO versus Ethereum: Why NEO might be 2018’s strongest cryptocurrency(五)|NEO对比Ethereum:为什么NEO可能是2018年最强的加密数字货币（五）](NonTechDoc/NEO-versus-Ethereum(5).md) 林炜鑫
+
 
 ### 2017/12/25 - 2017/12/31
 
