--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -23,7 +23,15 @@
 
 * [2018's Big Question: Can Bitcoin Forks Deliver Value?|2018年的一个大问题是:比特币的分叉币存在价值吗?](NonTechDoc/2018's-Big-Question-Can-Bitcoin-Forks-Deliver-Value.md)林炜鑫
 
+* [2017: A Defining Year for Cryptocurrency Regulation | 2017年:加密货币监管的元年](NonTechDoc/2017：A%20Defining%20Year%20for%20Cryptocurrency%20Regulation.md) 林炜鑫
 
+* [A Legal Renaissance, Blockchain Sty|区块链领域的法律文艺复兴](NonTechDoc/A%20Legal%20Renaissance%2C%20Blockchain%20Style.md)林炜鑫
+
+* [Blockchain Asset Registries: Approaching Enlightenment?|区块链资产登记:通往启蒙?](NonTechDoc/Blockchain%20Asset%20Registries：Approaching%20Enlightenment%3F.md) 林炜鑫
+
+* [Hacks, Scams and Attacks: Blockchain's 2017 Disasters|黑客，诈骗和攻击：Blockchain的2017年灾难](NonTechDoc/Hacks%2C%20Scams%20and%20Attacks：Blockchain's%202017%20Disasters.md)林炜鑫
+
+* [Why Crypto Looks A Lot Like Wall Street|为什么加密（货币）市场看起来这么像华尔街](NonTechDoc/Why%20Crypto%20Looks%20A%20Lot%20Like%20Wall%20Street.md)林炜鑫
 
 
 ### 2018/1/22 - 2018/1/28
