--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -46,11 +46,19 @@
 
 * [Don't HODL, BUIDL: How Blockchain Tech Will Add Value in 2018|不仅HODL，还要BUIDL：2018区块链增值的方式](NonTechDoc/How-Blockchain-Tech-Will-Add-Value-in-2018.md) 林炜鑫
 
+* [Beyond the Red Tape: The Path Ahead for Token Sales（一）|超越繁文缛节:代币销售的前方道路（一）](NonTechDoc/Beyond-the-Red-Tape-The-Path-Ahead-for-Token-Sales（一）.md) 林炜鑫
+
+* [Beyond the Red Tape:The Path Ahead for Token Sales(二) |超越繁文缛节:代币销售的前方道路（二)](NonTechDoc/Beyond-the-Red-Tape-The-Path-Ahead-for-Token-Sales（二）.md)林炜鑫
+
 ### 2018/1/15 - 2018/1/21
 
 * [Powers of Tau 活动教程](NonTechDoc/Powers of Tau Tutorial.md) 鱼
 
 * [为什么2018年将会是以太坊和量子链的一年（二）](NonTechDoc/Why%202018%20Will%20Be%20The%20Year%20Of%20Ethereum%20And%20QTUM(2).md) 林炜鑫
+
+* [Bitcoin's Real Bottleneck（一）|比特币的真正瓶颈（一）](NonTechDoc/Bitcoin's%20Real%20Bottleneck(一）.md) 林炜鑫
+
+* [Bitcoin's Real Bottleneck（二）|比特币的真正瓶颈（二）](NonTechDoc/Bitcoin's%20Real%20Bottleneck(二）.md) 林炜鑫
 
 ### 2018/1/8 - 2018/1/14
 
@@ -65,6 +73,8 @@
 * [世界，你好 - Web3 基金会介绍](NonTechDoc/hello-world.md) 鱼
 
 * [NEO versus Ethereum: Why NEO might be 2018’s strongest cryptocurrency(五)|NEO对比Ethereum:为什么NEO可能是2018年最强的加密数字货币（五）](NonTechDoc/NEO-versus-Ethereum(5).md) 林炜鑫
+
+* [Avoiding Digital Feudalism Built on Blockchains|避免建立在区块链上的数字封建制度](NonTechDoc/Avoiding%20Digital%20Feudalism%20Built%20on%20Blockchains.md) 林炜鑫
 
 
 ### 2017/12/25 - 2017/12/31
