--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -56,9 +56,9 @@
 
 * [为什么2018年将会是以太坊和量子链的一年（二）](NonTechDoc/Why%202018%20Will%20Be%20The%20Year%20Of%20Ethereum%20And%20QTUM(2).md) 林炜鑫
 
-* [Bitcoin's Real Bottleneck（一）|比特币的真正瓶颈（一）](NonTechDoc/Bitcoin's%20Real%20Bottleneck(一).md) 林炜鑫
+* [Bitcoin's Real Bottleneck（一）|比特币的真正瓶颈（一）](NonTechDoc/Bitcoin's%20Real%20Bottleneck(一）.md)林炜鑫
 
-* [Bitcoin's Real Bottleneck（二）|比特币的真正瓶颈（二）](NonTechDoc/Bitcoin's%20Real%20Bottleneck(二）.md) 林炜鑫
+* [Bitcoin's Real Bottleneck（二）|比特币的真正瓶颈（二）](NonTechDoc/Bitcoin's%20Real%20Bottleneck(二）.md)林炜鑫
 
 ### 2018/1/8 - 2018/1/14
 
@@ -81,7 +81,7 @@
 
 * [我们为什么要为改变世界而战斗？](NonTechDoc/why-do-we-fight-to-change-the-world.md) 鱼
 
-* [NEO对比Ethereum:为什么NEO可能是2018年最强的加密数字货币(四)]（NonTechDoc/NEO-versus-Ethereum(4).md）林炜鑫
+* [NEO对比Ethereum:为什么NEO可能是2018年最强的加密数字货币(四)](NonTechDoc/NEO-versus-Ethereum(4).md)林炜鑫
 
 
 ### 2017/12/18 - 2017/12/24
