--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -56,7 +56,7 @@
 
 * [为什么2018年将会是以太坊和量子链的一年（二）](NonTechDoc/Why%202018%20Will%20Be%20The%20Year%20Of%20Ethereum%20And%20QTUM(2).md) 林炜鑫
 
-* [Bitcoin's Real Bottleneck（一）|比特币的真正瓶颈（一）](NonTechDoc/Bitcoin's%20Real%20Bottleneck(一）.md)林炜鑫
+* [sda](NonTechDoc/Bitcoin's%20Real%20Bottleneck(一）.md)林炜鑫
 
 * [Bitcoin's Real Bottleneck（二）|比特币的真正瓶颈（二）](NonTechDoc/Bitcoin's%20Real%20Bottleneck(二）.md)林炜鑫
 
