--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -1,3 +1,12 @@
+### 2018/2/12 - 2018/2/18
+
+* [通过构造无需信任的系统，本体助力大企业进入区块链行业](TechDoc/trust-in-a-trustless-system-how-ontology-could-bring-big-business-to-blockchain.md) 鱼 翻译中
+
+### 2018/2/5 - 2018/2/11
+
+* [你了解 Web 3.0 吗？](TechDoc/why-the-web-3-0-matters-and-you-should-know-about-it.md) 鱼
+* [2018年去中心化交易所展望](TechDoc/state-of-decentralized-exchanges-2018.md) 鱼
+
 ### 2018/1/29 - 2018/2/4
 * [2017 Was Bitcoin's Year. 2018 Will Be Ethereum's | 2017年是比特币的一年,而2018将是以太坊的一年](NonTechDoc/2017-Was-Bitcoin-Year-2018-Will-Be-Ethereum.md) 林炜鑫
 
