--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -1,6 +1,9 @@
-### 2018/2/12 - 2018/2/18
+### 2018/2/19 - 2018/2/25
 
-* [通过构造无需信任的系统，本体助力大企业进入区块链行业](TechDoc/trust-in-a-trustless-system-how-ontology-could-bring-big-business-to-blockchain.md) 鱼 翻译中
+* [深入 Kyber Network（KNC）：一个领先的去中心化交易所](TechDoc/deep-dive-on-kyber-network-knc-a-leading-decentralized-exchange.md) 鱼
+
+
+### 2018/2/12 - 2018/2/18
 
 ### 2018/2/5 - 2018/2/11
 
@@ -15,7 +18,7 @@
 * [一步步教你使用 Decentraland 命令行接口](TechDoc/decentraland-command-line-interface.md) 鱼
 
 * [Best alternatives to Bitcoin: 10 cryptocurrencies to watch in 2018|比特币的最佳替代品：2018年要关注的10种加密货币](NonTechDoc/Best-alternatives-to-Bitcoin-10-cryptocurrencies-to-watch-in-2018.md) 林炜鑫
- 
+
 * [2018:The Year We Make Contract | 2018:我们制定合约的一年](NonTechDoc/2018-The-Year-We-Make-Contract.md) 林炜鑫
 
 * [What trends await us in 2018? | 2018年有哪些趋势等着我们呢？](NonTechDoc/What-trends-await-us-in-2018.md)林炜鑫
