谁将会是区块链界的微软？

--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -1,3 +1,7 @@
+### 2018/2/26 - 2018/3/4
+
+* [谁将会是区块链界的微软？](TechDoc/who-is-the-next-microsoft-in-blockchain.md) 鱼
+
 ### 2018/2/19 - 2018/2/25
 
 * [深入 Kyber Network（KNC）：一个领先的去中心化交易所](TechDoc/deep-dive-on-kyber-network-knc-a-leading-decentralized-exchange.md) 鱼
