--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -1,6 +1,7 @@
 ### 2018/2/26 - 2018/3/4
 
 * [谁将会是区块链界的微软？](TechDoc/who-is-the-next-microsoft-in-blockchain.md) 鱼
+* [2018年：又一个区块链增值的年份](NonTechDoc/2018-Another-Growth-Year-for-Blockchain.md) 林炜鑫
 
 ### 2018/2/19 - 2018/2/25
 
