--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -1,3 +1,7 @@
+### 2018/3/12 - 2018/3/18
+
+* [NonTechDoc/7-pro-tips-for-keeping-your-crypto-safe.md](7 个保障你的数字资产安全的秘诀) 鱼
+
 ### 2018/2/26 - 2018/3/4
 
 * [谁将会是区块链界的微软？](TechDoc/who-is-the-next-microsoft-in-blockchain.md) 鱼
