闪电网络首个主网版本发布

--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -1,6 +1,10 @@
+### 2018/3/19 - 2018/3/25
+
+* [lnd 0.4-beta 闪电网络首个主网版本发布!](TechDoc/lnd-beta.md)
+
 ### 2018/3/12 - 2018/3/18
 
-* [NonTechDoc/7-pro-tips-for-keeping-your-crypto-safe.md](7 个保障你的数字资产安全的秘诀) 鱼
+* [7 个保障数字资产安全的秘诀](NonTechDoc/7-pro-tips-for-keeping-your-crypto-safe.md) 鱼
 
 ### 2018/2/26 - 2018/3/4
 
