--- a/2、区块链英中字典.md
+++ b/2、区块链英中字典.md
@@ -6,6 +6,9 @@
 
         We have several example contracts that you can use as a starting point
 
+***2. air gapped***
 
-
-
+       n. 气隙; 空隙;
+       译：隔离
+       you should keep the majority of your crypto “cold” — that is, air gapped and offline.
+       You can either build an air gapped computer by removing the network card from your PC or laptop
