add back the recently finished translation

--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -58,6 +58,9 @@
 
 * [Why Crypto Looks A Lot Like Wall Street|为什么加密（货币）市场看起来这么像华尔街](NonTechDoc/Why%20Crypto%20Looks%20A%20Lot%20Like%20Wall%20Street.md)林炜鑫
 
+* [Triple Entry Accounting | 三式记账法](TechDoc/triple-entry-accounting.md) 荆凯
+
+* [Our Process for Evaluating New Tokens | 我们评估新代币的过程](TechDoc/our-process-for-evaluating-new-tokens.md) 荆凯
 
 ### 2018/1/22 - 2018/1/28
 * [Bitcoin Threat Model | 比特币威胁模型](TechDoc/Bitcoin%20Threat%20Model.md) 鱼
@@ -75,6 +78,12 @@
 
 * [Beyond the Red Tape:The Path Ahead for Token Sales(二) |超越繁文缛节:代币销售的前方道路（二)](NonTechDoc/Beyond-the-Red-Tape-The-Path-Ahead-for-Token-Sales（二）.md)林炜鑫
 
+
+* [ On Value, Velocity and Monetary Theory A New Approach to Cryptoasset Valuations | 论价值，流通速度和货币理论 -- 加密资产估值的新路径](TechDoc/on-value-velocity-and-monetary-theory-a-new-approach-to-cryptoasset-valuations.md) 荆凯
+
+* [The Harsh Truth About Cryptocurrency Trading And Get-Rich-Quick Schemes | 关于加密货币交易和暴富骗局的残酷真相
+](NonTechDoc/the-harsh-truth-about-cryptocurrency-trading-and-get-rich-quick-schemes.md) 荆凯
+
 ### 2018/1/15 - 2018/1/21
 
 * [Powers of Tau 活动教程](NonTechDoc/Powers of Tau Tutorial.md) 鱼
@@ -84,6 +93,11 @@
 * [Bitcoin's Real Bottleneck（一）|比特币的真正瓶颈（一）](NonTechDoc/Bitcoin's%20Real%20Bottleneck(一）.md)林炜鑫
 
 * [Bitcoin's Real Bottleneck（二）|比特币的真正瓶颈（二）](NonTechDoc/Bitcoin's%20Real%20Bottleneck(二）.md)林炜鑫
+
+* [My Most Valuable Crypto Market Insights for 2018: 关于2018年及以后的加密货币市场，我最有价值的思考](NonTechDoc/my-most-valuable-crypto-market-insights-for-2018-and-beyond.md) 荆凯
+
+* [我所有可靠的加密货币交易智慧都在这了](NonTechDoc/all-my-trusty-crypto-trading-wisdom-in-one-spot.md) 荆凯
+
 
 ### 2018/1/8 - 2018/1/14
 
@@ -101,6 +115,12 @@
 
 * [Avoiding Digital Feudalism Built on Blockchains|避免建立在区块链上的数字封建制度](NonTechDoc/Avoiding%20Digital%20Feudalism%20Built%20on%20Blockchains.md) 林炜鑫
 
+* [Mastering Shitcoins: 写给穷人的加密货币致富指南](NonTechDoc/mastering-shitcoins-the-poor-mans-guide-to-getting-crypto-rich.md)　荆凯
+
+* [Five Investments Guaranteed Better Than Bitcoin: 保证比Bitcoin更好的五种投资](NonTechDoc/five-investments-guaranteed-better-than-bitcoin.md) 荆凯
+
+* [Understanding Hyperledger In a Bit More Detail　详细理解超级账本项目](TechDoc/understanding-hyperledger-in-a-bit-more-detail.md
+) 荆凯
 
 ### 2017/12/25 - 2017/12/31
 
