--- a/1、已译文章.md
+++ b/1、已译文章.md
@@ -70,7 +70,7 @@
 * [How to Save on Bitcoin's Soaring Fees | 如何节省比特币高昂的交易费用](NonTechDoc/How-to-Save-on-Bitcoin's-Soaring-Fees.md) 林炜鑫
 
 * [Regulators Are Looking at Cryptocurrency | 监管机构正着眼于加密货币](NonTechDoc/Regulators-Are-Looking-at-Cryptocurrency.md#regulators-are-looking-at-cryptocurrency) 林炜鑫
-* [On Value, Velocity and Monetary Theory -- A New Approach to Cryptoasset Valuations | 论价值，流通速度与货币理论 -- 加密资产估值的新思路](TechDoc/crryptoasset-valuations.md) shuke0327
+
 
 * [Don't HODL, BUIDL: How Blockchain Tech Will Add Value in 2018|不仅HODL，还要BUIDL：2018区块链增值的方式](NonTechDoc/How-Blockchain-Tech-Will-Add-Value-in-2018.md) 林炜鑫
 
@@ -78,8 +78,7 @@
 
 * [Beyond the Red Tape:The Path Ahead for Token Sales(二) |超越繁文缛节:代币销售的前方道路（二)](NonTechDoc/Beyond-the-Red-Tape-The-Path-Ahead-for-Token-Sales（二）.md)林炜鑫
 
-
-* [ On Value, Velocity and Monetary Theory A New Approach to Cryptoasset Valuations | 论价值，流通速度和货币理论 -- 加密资产估值的新路径](TechDoc/on-value-velocity-and-monetary-theory-a-new-approach-to-cryptoasset-valuations.md) 荆凯
+* [ On Value, Velocity and Monetary Theory A New Approach to Cryptoasset Valuations | 论价值，流通速度和货币理论 -- 加密资产估值的新路径](TechDoc/cryptoasset-valuations.md) 荆凯
 
 * [The Harsh Truth About Cryptocurrency Trading And Get-Rich-Quick Schemes | 关于加密货币交易和暴富骗局的残酷真相
 ](NonTechDoc/the-harsh-truth-about-cryptocurrency-trading-and-get-rich-quick-schemes.md) 荆凯
@@ -176,9 +175,6 @@
 
 * [How to be prepared for the coming Altcoin bull market. | 如何为即将到来的山寨币牛市做准备](NonTechDoc/how-to-be-prepared-for-the-coming-altcoin-bull-market.md) 鱼
 
-* [What Will Bitcoin Look Like in Twenty Years? | 未来二十年比特币会什么样？](NonTechDoc/what-will-bitcoin-look-like-in-20-years.md)
-　　 shuke0327
-
 * [Understanding Token Velocity | 理解代币速度](TechDoc/Understanding-Token-Velocity.md)  龙心小台
 
 * [How to explain Lightning Network to your non-technical friends? 如何向你的非技术朋友解释闪电网络](TechDoc/how-to-explain-lightning-network-to-your-non-technical-friends.md)  小丹
@@ -186,10 +182,13 @@
 * [Why I Bet on Ethereum(上)?|为什么我会押赌注以太坊（上）](TechDoc/Why-I-Bet-on-Ethereum.md)林炜鑫
 
 ### 2017/11/06 - 2017/11/12
-* [Hyperledger Fabric Transaction Flow | 超级账本 Fabric 项目的交易流程](TechDoc/transaction-flow.md) shuke0327
+* [Hyperledger Fabric Transaction Flow | 超级账本 Fabric 项目的交易流程](TechDoc/transaction-flow.md) 荆凯(shuke0327)
+
 * [How Blockchains Will Turn Supply Chains Into Demand Chains | 区块链将如何把供应链转变为需求链]( /NonTechDoc/How%20Blockchains%20Will%20Turn%20Supply%20Chains%20Into%20Demand%20Chains.md) 何德林
 
 * [Why and how the Cryptobubble will burst 为什么加密货币泡沫将破裂，如何破裂？](NonTechDoc/why-and-how-the-cryptobubble-will-burst.md) 鱼
+
+* [What Will Bitcoin Look Like in Twenty Years? | 未来二十年比特币会是什么样？](NonTechDoc/what-will-bitcoin-look-like-in-20-years.md) 荆凯
 
 ### 2017/10/30 - 2017/11/05
 * [Ethereum Casper 101 | 初识以太坊 Capsper](/TechDoc/Ethereum%20Casper%20101.md)  oscnet 胖哥@胖哥说币
@@ -201,7 +200,7 @@
 
 * [Who Should Control A Blockchain? | 谁应该控制一个区块链？](/NonTechDoc/Who-Should-Control-A-Blockchain.md) 林炜鑫
 
-* [Hyperledger Fabric Model - 超级账本 Fabric 项目的模型](TechDoc/hyperledger-fabric-model.md) shuke0327
+* [Hyperledger Fabric Model - 超级账本 Fabric 项目的模型](TechDoc/hyperledger-fabric-model.md) 荆凯(shuke0327)
 
 ### 2017/10/23 - 2017/10/29
 * [What is Hyperledger Fabric?--什么是超级账本 Fabirc?](TechDoc/what-is-hyperledger-fabric.md)  荆凯(shuke0327)
