--- a/2、区块链英中字典.md
+++ b/2、区块链英中字典.md
@@ -12,3 +12,8 @@
        译：隔离
        you should keep the majority of your crypto “cold” — that is, air gapped and offline.
        You can either build an air gapped computer by removing the network card from your PC or laptop
+
+***3. commitment failures***
+
+
+       and theoretical it could handle 1000s if is limited commitment failures.
